--- a/Interests.html
+++ b/Interests.html
@@ -3,7 +3,7 @@
 	<title>Bashshar's Interest</title>
 	 <link rel="stylesheet" href="style.css">
 	   	<div class="topnav">
-  		<a href="HomePage.html">Home</a>
+  		<a href="index.html">Home</a>
   		<a href="Interests.html">Interests</a>
  	 	<a href="Projects.html">Projects</a>
   		<a href="ContactPage.html">Contact Me</a>
@@ -61,7 +61,7 @@
 
 <div class="footer">
 		<hr>
-		<a href="HomePage.html">Home   </a>
+		<a href="index.html">Home   </a>
 		<a href="ContactPage.html"> | Contact Me | </a>
 		<a href="https://www.linkedin.com/in/bashshar-atif-a4945117a/">  LinkedIn | </a>
 		<a href="https://docs.google.com/document/d/1PlMk6CbN7CoX3YUeNiNzPXxLvghYsWXi1V_TLEVwQFA/edit?usp=sharing">   Resume</a>
