--- a/Interests.html
+++ b/Interests.html
@@ -23,7 +23,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="walk.jpg" style="width:100%">
+      <img src="https://batif1.github.io/MyWesbite/walk.jpg" style="width:100%">
       <div class="container">
         <h2>Going on Walks</h2>
         <p class="title">It's meditative and relaxing.</p>
