--- a/Interests.html
+++ b/Interests.html
@@ -23,7 +23,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="https://batif1.github.io/MyWesbite/walk.jpg" style="width:100%">
+      <img src="https://batif1.github.io/MyWesbite/walk.JPG" style="width:100%">
       <div class="container">
         <h2>Going on Walks</h2>
         <p class="title">It's meditative and relaxing.</p>
@@ -35,7 +35,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="park.jpg" style="width:100%">
+      <img src="https://batif1.github.io/MyWesbite/park.JPG" style="width:100%">
       <div class="container">
         <h2>Being a Stewart to Nature</h2>
         <p class="title">Let's preserve our planet for future generations.</p>
@@ -47,7 +47,7 @@
   
   <div class="column">
     <div class="card">
-      <img src="zero.jpg" style="width:100%">
+      <img src="https://batif1.github.io/MyWesbite/zero.JPG" style="width:100%">
       <div class="container">
         <h2>Entrepeneurship</h2>
         <p class="title">One of the best ways to solve large problems.</p>
