--- a/Projects.html
+++ b/Projects.html
@@ -28,7 +28,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="i4noi.jpg" style="width:100%">
+      <img src="https://batif1.github.io/MyWesbite/i4noi.JPG" style="width:100%">
       <div class="container">
         <h2>I4NOI</h2>
         <p class="title">Smart Cane for the Visually Impaired</p>
@@ -40,7 +40,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="dapp.jpg" style="width:100%">
+      <img src="https://batif1.github.io/MyWesbite/dapp.JPG" style="width:100%">
       <div class="container">
         <h2>HAUS DAPP</h2>
         <p class="title">Nonfungible Documents</p>
@@ -53,7 +53,7 @@
   
   <div class="column">
     <div class="card">
-      <img src="zero.jpg" style="width:100%">
+      <img src="https://batif1.github.io/MyWesbite/zero.JPG" style="width:100%">
       <div class="container">
         <h2>Self-Made Start-up</h2>
         <p class="title">One of the best ways to solve large problems.</p>
