--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  	<div class="body-main-page">
 		<hr>
 		<p><center>An Aspiring Engineering and Business Double Degree student with vast interests keen to add value to your business.
-		As a task, technology, and people-oriented professional I can get projects done that exceed expectations. My coworkers, higher-ups, and subordinates love to work with me as I add to a warm and constructive environment. I have lots of energy and resilience which makes me a fast learner which is particularly important in the technology sector. I have work experience in Customer Service, Inbound Marketing, Client Relations, Project Management and SAAS and HAAS development. Feel free to message me to know more, I love to chat! <center></p>
+		As a task, technology, and people-oriented professional I can get projects done that exceed expectations. Feel free to message me to know more, I love to chat! <center></p>
 		<h1 id="top"> 
 		<hr>
 	</div>
